Fix busted font scaling on iOS

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,7 @@
 html {
   font-size: 62.5%;
   height: 100%;
+  -webkit-text-size-adjust: 100%;
 }
 
 body {
